# CNC_Milling_Machine

./: CMakeLists.txt  PicoControlGUI.m  README.md  main.c
